--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,15 @@ project(stm32-cmake-libopencm3)
 set(INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/libopencm3/include)
 set(SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/libopencm3/lib)
 
-SET(TARGET_CMAKE ${CMAKE_CURRENT_LIST_DIR}/targets/${TARGET_SUBFAMILY}.cmake)
+message(STATUS ${STM32_TARGET_SUBFAMILY})
+message(STATUS ${STM32_TARGET_FAMILY})
+
+SET(TARGET_CMAKE ${CMAKE_CURRENT_LIST_DIR}/targets/${STM32_TARGET_SUBFAMILY}.cmake)
 if (NOT EXISTS ${TARGET_CMAKE})
-    set(TARGET_CMAKE ${CMAKE_CURRENT_LIST_DIR}/targets/${TARGET_FAMILY}.cmake)
+    set(TARGET_CMAKE ${CMAKE_CURRENT_LIST_DIR}/targets/${STM32_TARGET_FAMILY}.cmake)
 endif()
 if (NOT EXISTS ${TARGET_CMAKE})
-    message(FATAL_ERROR "Unknown target family ${TARGET_FAMILY} or subfamily ${TARGET_SUBFAMILY}")
+    message(FATAL_ERROR "Unknown target family ${STM32_TARGET_FAMILY} or subfamily ${STM32_TARGET_SUBFAMILY}")
 endif()
 
 
@@ -41,5 +44,27 @@ add_custom_target(gen_nvic ALL DEPENDS
 )
 
 add_library(opencm3 STATIC ${TARGET_SRCS})
-target_include_directories(opencm3 PUBLIC ${INCLUDE_DIR})
+target_include_directories(opencm3 PUBLIC
+    $<BUILD_INTERFACE:${INCLUDE_DIR}>
+    $<INSTALL_INTERFACE:include>
+)
 add_dependencies(opencm3 gen_nvic)
+
+
+set(CONFIG_FILE ${CMAKE_CURRENT_BINARY_DIR}/opencm3-config.cmake)
+configure_file(cmake/opencm3-config.cmake ${CONFIG_FILE})
+install(
+    FILES ${CONFIG_FILE}
+    DESTINATION ${STM32_CMAKE_CONFIG_PATH}
+)
+
+install(
+    DIRECTORY ${INCLUDE_DIR}
+    DESTINATION ${STM32_ROOT_PATH}/${STM32_MCU_NAME}
+)
+
+install(
+    TARGETS opencm3
+    LIBRARY DESTINATION ${STM32_LIB_PATH}
+    ARCHIVE DESTINATION ${STM32_LIB_PATH}
+)
